--- a/index.html
+++ b/index.html
@@ -21,10 +21,10 @@
 <section id="Home">
 
 	<body>
-		<header>
-			<div class="container">
-				<div class="logo">
-					<a href="index.html"><img src="https://media.discordapp.net/attachments/799150023094435881/799513894829293608/Logo.png" alt="logo" height="95" width="160"></a>
+	  <header>
+	    <div class="container">
+		 <div class="logo">
+		  <a href="index.html"><img src="https://media.discordapp.net/attachments/799150023094435881/799513894829293608/Logo.png" alt="logo" height="95" width="160"></a>
     </div> 
 
       <nav>
@@ -33,7 +33,7 @@
           <li><a href="https://discord.com/api/oauth2/authorize?client_id=791891067309785108&permissions=2147352567&scope=bot"   target="_blank">Invite</a></li>
           <li><a href="#Information">Info</a></li>
           <li><a href="https://top.gg/bot/791891067309785108" target="_blank">Vote</a></li>
-          <li><a href="https://discord.gg/k9xb5a98tt" target="_blank">👍Support server</a></li>
+          <li><a href="https://discord.gg/KqS6bq64jP" target="_blank">👍Support server</a></li>
         </ul>
       </nav>
    </div>
