--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
   <div class="content"> 
     <h1 class="H1-content">
       <br><br><b>Hello,<br> I am Glados</b>
-     <h2 class="H2-content">An all in one Discord bot (Still in BETA) which allows you to access it's various unique features! Glados is coded in language Python V3.8.1 (discord.py)<br> Created by DuckLord and Ch0colate.</h2>
+     <h2 class="H2-content">An all in one Discord bot (Still in BETA) which allows you to access it's various unique features! Glados is coded in language Python V3.8.1 (discord.py)<br><b> Created by DuckLord and Ch0colate.</b></h2>
    </div>
 
   <div id="Bot, 1">
