--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
 
       <nav>
         <ul>
-          <strong><li><a href="/Commands.html">Commands </a></li></strong>
+          <li><a href="/Commands.html">Commands </a></li>
           <li><a href="https://discord.com/api/oauth2/authorize?client_id=791891067309785108&permissions=2147352567&scope=bot"   target="_blank">Invite</a></li>
           <li><a href="#Information">Info</a></li>
           <li><a href="https://top.gg/bot/791891067309785108" target="_blank">Vote</a></li>
