--- a/futurework.html
+++ b/futurework.html
@@ -10,7 +10,7 @@
 <head>
 	<meta charset="utf-8">
 	<meta name="viewport" content="width=device-width">
-  <meta name="description" content="Glados is a powerful multipurpose discord bot (Still In BETA).">
+  <meta name="description" content="Glados | discord bot - Future Work">
   <meta name="keywords" content="Discord Bot, Glados, powerful Discord Bot, DuckLords Bot, Python Discord Bot, Moderation Bot, Fun Discord bot, discord, discordapp bot, WilliamTheDev">
 	<link rel="icon" href="https://media.discordapp.net/attachments/799150023094435881/799500009467936778/image.png?width=521&height=498"
 	 type="image/png">
