--- a/futurework.html
+++ b/futurework.html
@@ -16,7 +16,7 @@
 	 type="image/png">
 	<title>Glados │ Discord Bot - FutureWork</title>
 
-	<link href="style.css" rel="stylesheet" type="text/css" />
+	<link href="style-2.css" rel="stylesheet" type="text/css" />
 </head>
 
  <body>
