--- a/information.html
+++ b/information.html
@@ -19,7 +19,8 @@
 	<link href="style-2.css" rel="stylesheet" type="text/css" />
 </head>
 
- <body>
+ <body> 
+  <h1><href="https://gladosbot.ml/commands"To go to the website</h1>
   <iframe width="100%" height="760px" src="https://www.youtube.com/embed/dQw4w9WgXcQ?autoplay=1&volume=200%" >
   </iframe>
  </body>
