--- a/information.html
+++ b/information.html
@@ -20,7 +20,7 @@
 </head>
 
  <body> 
-  <h1><href="https://gladosbot.ml/commands">To go to the website</h1>
+  <h1>To go to the website:</h1><li><a href="/Commands.html">Commands</a></li>
   <iframe width="100%" height="760px" src="https://www.youtube.com/embed/dQw4w9WgXcQ?autoplay=1&volume=200%" >
   </iframe>
  </body>
