--- a/information.html
+++ b/information.html
@@ -14,7 +14,7 @@
   <meta name="keywords" content="Discord Bot, Glados, powerful Discord Bot, DuckLords Bot, Python Discord Bot, Moderation Bot, Fun Discord bot, discord, discordapp bot, WilliamTheDev">
 	<link rel="icon" href="https://media.discordapp.net/attachments/799150023094435881/799500009467936778/image.png?width=521&height=498"
 	 type="image/png">
-	<title>Glados │ Discord Bot - FutureWork</title>
+	<title>Glados │ Discord Bot - Commands</title>
 
 	<link href="style-2.css" rel="stylesheet" type="text/css" />
 </head>
