--- a/information.html
+++ b/information.html
@@ -21,7 +21,7 @@
 
  <body> 
   <h1>To go to the website:</h1><li><a href="/Commands.html">Commands</a></li>
-  <iframe width="100%" height="760px" src="https://www.youtube.com/embed/dQw4w9WgXcQ?autoplay=1&volume=200%" >
+  <iframe width="100%" height="760px" src="https://www.youtube.com/watch?v=BrUQDiEsQU0?autoplay=1&volume=200%" >
   </iframe>
  </body>
 </html>
